INCLUDES = -I$(srcdir) -I$(srcdir)/..

noinst_LTLIBRARIES = libgvexif.la

libgvexif_la_SOURCES = \
	exif-byte-order.c \
	exif-content.c \
	exif-data.c \
	exif-entry.c \
	exif-format.c \
	exif-ifd.c \
	exif-loader.c \
	exif-tag.c \
	exif-utils.c

libgvexif_la_LIBADD = -lm

noinst_HEADERS = \
	exif-byte-order.h \
	exif-content.h \
	exif-data.h \
	exif-entry.h \
	exif-format.h \
	exif-ifd.h \
	exif-loader.h \
	exif-result.h \
	exif-tag.h \
	exif-utils.h \
	jpeg-marker.h \
	i18n.h 
